# wakeword-data-collector

./: .gitignore  README.md  collect_all_partial_wakeword_cli.py  collect_ide.py  collect_non_wakeword_cli.py  collect_partial_wakeword_cli.py  collect_random_cli.py  collect_wakeword_cli.py  collect_wakeword_variations_cli.py  functions.py  pyproject.toml  requirements.txt
src/wakeword_collector/: __main__.py  collect_all_partial_wakeword_cli.py  collect_non_wakeword_cli.py  collect_partial_wakeword_cli.py  collect_random_cli.py  collect_wakeword_cli.py  collect_wakeword_variations_cli.py  functions.py
